Fixed tags in search, article counter for author and small UI fixes