@@ -81,8 +81,8 @@ public class ArticleService {
         return new PageResponseDTO<>(
                 offset > 0 && articles.getTotalElements() > 0,
                 (offset + limit) < articles.getTotalElements(),
-                articles.getContent().stream().map(ArticleDTO::new).collect(Collectors.toList())
-        );
+                articles.getContent().stream().map(ArticleDTO::new).toList(),
+                articles.getTotalElements());
     }
 
     private Page<Article> getAllArticlesByAuthorPaginated(User author, Integer limit, Integer offset) {
@@ -108,8 +108,8 @@ public class ArticleService {
         return new PageResponseDTO<>(
                 offset > 0 && articles.getTotalElements() > 0,
                 (offset + limit) < articles.getTotalElements(),
-                articles.getContent().stream().map(ArticleDTO::new).collect(Collectors.toList())
-        );
+                articles.getContent().stream().map(ArticleDTO::new).toList(),
+                articles.getTotalElements());
     }
 
     private Page<Article> getArticlesByStatePaginated(ArticleState state, Integer limit, Integer offset) {
